--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -1,6 +1,8 @@
 <?xml version='1.0' encoding='UTF-8' ?>
+
 <!DOCTYPE composition PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<ui:composition xmlns:ui="http://java.sun.com/jsf/facelets"
+<ui:composition xmlns="http://www.w3.org/1999/xhtml"
+                xmlns:ui="http://java.sun.com/jsf/facelets"
                 xmlns:f="http://java.sun.com/jsf/core"
                 xmlns:h="http://java.sun.com/jsf/html"
                 template="./WEB-INF/templates/principal.xhtml">
@@ -20,17 +22,17 @@
             <div class="titulo-form">LOGIN</div>
             <h:panelGroup styleClass="form-block" layout="block">
                 <h:outputLabel value="Usuário" style="display: inline-block; width: 50px"/>
-                <h:inputText id="usuario"/>
+                <h:inputText id="usuario" value="#{loginBean.usuario}" required="true"/>
             </h:panelGroup>
             <h:panelGroup styleClass="form-block" layout="block">
                 <h:outputLabel value="Senha" style="display: inline-block; width: 50px"/>
-                <h:inputSecret id="senha"/>
+                <h:inputSecret id="senha" value="#{loginBean.senha}" required="true"/>
             </h:panelGroup>
             <h:panelGroup styleClass="form-block" layout="block">
                 <h:selectBooleanCheckbox id="opadmin"/>
-                <h:outputText value="Administrador"/>
+                <h:outputText id="Administrador" value="true"/>
             </h:panelGroup>
-            <h:commandButton value="Entrar"/>
+            <h:commandButton value="Entrar" action="#{loginBean.confirmaAction}"/>
             <h:messages/>
         </h:form>
     </ui:define>
